namespace LeadersBoardGame.GameLogic.Interactions;

public enum InteractionResultType
{
    CardChosen,
    PositionChosen,
    NoChoice,
    CancelAction,
    UndoLastAction,
    EndPhase
}
