namespace LeadersBoardGame.GameLogic.Interactions;

public enum InteractionType
{
    CharacterCardExpected,
    PositionExpected
}
