namespace LeadersBoardGame.GameLogic.Interactions;

public enum TargetCategory
{
    MovementDestination,
    ActiveAbilityDestination,
    ActiveAbilityTarget
}
